...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:tint="@sample/tasks.json/data/backgroundTint"
        />

    <TextView
        android:id="@+id/lbl_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/lbl_project_name"
        app:layout_constraintEnd_toStartOf="@id/img_delete"
        app:layout_constraintStart_toEndOf="@id/img_project"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/tasks.json/data/taskName"
        />

    <TextView
...
